[project]
name = "DiskViewer"
version = "0.1.0"
description = ""
authors = [{name = "iTrooz"}]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "wmi (>=1.5.1,<2.0.0) ; sys_platform == \"win32\""
]
packages = [{ include = "diskviewer" }]

[tool.poetry.scripts]
diskviewer = "diskviewer.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
